# RoToBoy

./: .gitignore  CMakeLists.txt
includes/: cartridge.h  cpu.h  mmu.h
src/: cartridge.c  cpu.c  mmu.c
tests/: test_cartridge.py  test_cpu.py
